fix: remove the browser's scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,19 @@
-body {
+html, body {
   background-color: #151217;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  
+  /* Hide scrollbar for Firefox */
+  scrollbar-width: none;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
 }
 
 :root {
